# openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: "A JWT based API for managing users and issuing JWT tokens "
   version: 0.0.1
 paths:
-  /token:
+  /auth/v1/token:
     summary: ""
     post:
       parameters:
@@ -34,7 +34,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Session"
-  /signup:
+  /auth/v1/signup:
     summary: ""
     post:
       parameters:
@@ -54,7 +54,7 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/Session"
                   - $ref: "#/components/schemas/User"
-  /otp:
+  /auth/v1/otp:
     summary: ""
     post:
       parameters:
